# seo-incident-copilot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: ranking_snapshots.json
data/gsc/: gsc_cannibalization.json  gsc_canonical_regression.json  gsc_content_decay.json  gsc_demand_drop.json  gsc_intent_shift.json  gsc_no_trigger.json  gsc_technical_regression.json
data/knowledge_base/: cannibalization_playbook.md  content_decay_playbook.md  demand_shift_playbook.md  intent_shift_playbook.md  noindex_regression_playbook.md  seo_security_playbook.md
data/page_audits/: page_audit_canonical_regression.json  page_audit_clean.json  page_audit_content_decay.json  page_audit_noindex.json
data/serp/: new_serp_cannibalization.json  (+4 more)
docs/: ai_engineering_maturity_map.md  architecture.md  failure_modes.md  prompts.md
prompts/: cheap_model_triage.txt  expensive_model_executive_decision.txt  middle_model_root_cause.txt  system_guardrails.txt
scripts/: live_api_smoke.py  reviewer_demo.py
tests/: test_ai_maturity_reviewer_demo.py  test_cost_tracker.py  test_grounding_guard.py  test_grounding_guard_enriched.py  test_live_llm_client.py  test_manual_model_outputs.py  test_model_router.py  test_pipeline_content_decay.py  test_pipeline_enriched_scenarios.py  test_pipeline_intent_shift.py  test_pipeline_no_trigger.py  test_pipeline_technical.py  test_pipeline_timeout_fallback.py  test_prompt_files.py  test_rag_retriever.py  test_rank_drop.py  test_reviewer_demo_metrics.py  test_schema_validation.py  test_slack_payload.py
(+39 files in other folders)
