[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-incident-copilot"
version = "0.1.0"
description = "Production-shaped SEO/GEO incident detection mini-pipeline for the YOYABA SEO AI Engineer case study."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alexandre Caro" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
